--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 Startup Success is <span class="text-blue-600">Math</span>, Not Luck.
             </h1>
             <p class="text-xl text-slate-600 max-w-2xl mx-auto mb-8 leading-relaxed">
-                The essential toolkit for founders and operators. Practical models to help you raise capital, manage cash, and scale growth.
+               Impact-Site-Verification: 071cd124-2c9d-403f-afe2-5df7b29ca268 The essential toolkit for founders and operators. Practical models to help you raise capital, manage cash, and scale growth.
             </p>
             
             <div class="max-w-md mx-auto relative">
@@ -292,3 +292,4 @@
     </script>
 </body>
 </html>
+
