--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="max-w-5xl mx-auto text-center">
             <a href="/index.html" class="inline-block mb-6">
                 <img 
-                    src="/logo.jpg" 
+                    src="/logo.png" 
                     alt="FounderCalculators Logo" 
                     class="logo-img mx-auto"
                 >
@@ -152,3 +152,4 @@
     </script>
 </body>
 </html>
+
