--- a/index.html
+++ b/index.html
@@ -78,18 +78,157 @@
                         <p class="text-sm text-slate-500 mt-2">Estimate company worth via modern multiples.</p>
                     </a>
                 </div>
-                <!-- ... (all other finance cards unchanged) ... -->
+                <div class="tool-wrapper">
+                    <a href="unit-economics.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-emerald-500">Unit Economics</span>
+                        <h3 class="font-bold text-lg mt-1">Unit Economics</h3>
+                        <p class="text-sm text-slate-500 mt-2">Analyze profit per unit and contribution margin.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="equity-dilution.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-purple-500">Equity</span>
+                        <h3 class="font-bold text-lg mt-1">Equity Dilution</h3>
+                        <p class="text-sm text-slate-500 mt-2">Model ownership after a funding round.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="convertible-note.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-purple-500">Equity</span>
+                        <h3 class="font-bold text-lg mt-1">Convertible Note</h3>
+                        <p class="text-sm text-slate-500 mt-2">Calculate SAFE or Note conversions.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="berkus-valuation.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-blue-500">Valuation</span>
+                        <h3 class="font-bold text-lg mt-1">Berkus Method</h3>
+                        <p class="text-sm text-slate-500 mt-2">Pre-revenue valuation for early startups.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="rule-of-40.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-green-500">Efficiency</span>
+                        <h3 class="font-bold text-lg mt-1">Rule of 40</h3>
+                        <p class="text-sm text-slate-500 mt-2">Balance growth vs. profitability.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="breakeven-analysis.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-green-500">Efficiency</span>
+                        <h3 class="font-bold text-lg mt-1">Breakeven Point</h3>
+                        <p class="text-sm text-slate-500 mt-2">When will your startup turn a profit?</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="debt-repayment.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-slate-500">Loans</span>
+                        <h3 class="font-bold text-lg mt-1">Debt Repayment</h3>
+                        <p class="text-sm text-slate-500 mt-2">Calculate venture debt and monthly payments.</p>
+                    </a>
+                </div>
             </div>
         </section>
 
-        <!-- Growth section unchanged -->
         <section id="growth" class="mb-20 category-section">
-            <!-- ... content as before ... -->
+            <div class="flex items-center mb-8">
+                <div class="bg-green-600 w-2 h-10 rounded-full mr-4"></div>
+                <div>
+                    <h2 class="text-3xl font-bold text-slate-900">Growth & Marketing</h2>
+                    <p class="text-slate-500">LTV, Churn, and Viral loop optimization.</p>
+                </div>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                <div class="tool-wrapper">
+                    <a href="mrr-projector.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-blue-600">Forecasting</span>
+                        <h3 class="font-bold text-lg mt-1">MRR Projector</h3>
+                        <p class="text-sm text-slate-500 mt-2">Project future monthly recurring revenue.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="cac-ltv-ratio.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-green-600">Unit Economics</span>
+                        <h3 class="font-bold text-lg mt-1">CAC to LTV</h3>
+                        <p class="text-sm text-slate-500 mt-2">Determine the health of your acquisition.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="viral-coefficient.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-pink-500">Loops</span>
+                        <h3 class="font-bold text-lg mt-1">Viral Coefficient</h3>
+                        <p class="text-sm text-slate-500 mt-2">Measure organic growth and k-factor.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="roas-calculator.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-orange-500">Ads</span>
+                        <h3 class="font-bold text-lg mt-1">ROAS Calculator</h3>
+                        <p class="text-sm text-slate-500 mt-2">Calculate return on ad spend.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="churn-impact.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-red-500">Retention</span>
+                        <h3 class="font-bold text-lg mt-1">Churn Impact</h3>
+                        <p class="text-sm text-slate-500 mt-2">The revenue cost of customer loss.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="referral-roi.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-indigo-500">Referrals</span>
+                        <h3 class="font-bold text-lg mt-1">Referral ROI</h3>
+                        <p class="text-sm text-slate-500 mt-2">Model the impact of referral programs.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="email-roi.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-yellow-600">Email</span>
+                        <h3 class="font-bold text-lg mt-1">Email Marketing ROI</h3>
+                        <p class="text-sm text-slate-500 mt-2">Value your list and campaign performance.</p>
+                    </a>
+                </div>
+            </div>
         </section>
 
-        <!-- Ops section unchanged -->
         <section id="ops" class="mb-20 category-section">
-            <!-- ... content as before ... -->
+            <div class="flex items-center mb-8">
+                <div class="bg-slate-800 w-2 h-10 rounded-full mr-4"></div>
+                <div>
+                    <h2 class="text-3xl font-bold text-slate-900">Operations & Scaling</h2>
+                    <p class="text-slate-500">Hiring, platform fees, and pricing.</p>
+                </div>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                <div class="tool-wrapper">
+                    <a href="employee-cost.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-slate-600">Hiring</span>
+                        <h3 class="font-bold text-lg mt-1">Burdened Cost</h3>
+                        <p class="text-sm text-slate-500 mt-2">Total cost of hiring (salary + benefits).</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="app-store-tax.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-indigo-500">Platforms</span>
+                        <h3 class="font-bold text-lg mt-1">App Store Tax</h3>
+                        <p class="text-sm text-slate-500 mt-2">Net revenue after store commissions.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="freelance-to-agency.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-slate-600">Hiring</span>
+                        <h3 class="font-bold text-lg mt-1">Agency Scaler</h3>
+                        <p class="text-sm text-slate-500 mt-2">Profit modeling for service agencies.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="consulting-rate.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-slate-600">Solo</span>
+                        <h3 class="font-bold text-lg mt-1">Consulting Rate</h3>
+                        <p class="text-sm text-slate-500 mt-2">Calculate your ideal hourly/project rate.</p>
+                    </a>
+                </div>
+            </div>
         </section>
 
         <article class="max-w-4xl mx-auto px-6 py-12 text-slate-700 border-t prose prose-slate">
@@ -152,4 +291,3 @@
     </script>
 </body>
 </html>
-
