--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <script src="/nav.js"></script>
 
-    <header class="bg-white border-b py-20 md:py-24 px-6">
+    <header class="bg-white border-b py-16 px-6">
         <div class="max-w-5xl mx-auto text-center">
-            <h1 class="text-5xl md:text-6xl font-extrabold text-slate-900 mb-6 tracking-tight leading-tight">
+            <h1 class="text-5xl font-extrabold text-slate-900 mb-4 tracking-tight leading-tight">
                 Startup Success is <span class="text-blue-600">Math</span>, Not Luck.
             </h1>
-            <p class="text-xl md:text-2xl text-slate-600 max-w-3xl mx-auto mb-10 leading-relaxed">
+            <p class="text-xl text-slate-600 max-w-2xl mx-auto mb-8 leading-relaxed">
                 The essential toolkit for founders and operators. Practical models to help you raise capital, manage cash, and scale growth.
             </p>
             
