--- a/burn-rate-runway.html
+++ b/burn-rate-runway.html
@@ -18,8 +18,6 @@
         .standard-link { transition: color 0.2s; }
         .standard-link:hover { color: #2563eb; text-decoration: underline; }
         .calc-card { background: #ffffff; border: 1px solid #e2e8f0; border-radius: 16px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05); }
-        .btn-primary { background: #2563eb; color: white; transition: all 0.2s; cursor: pointer; }
-        .btn-primary:hover { background: #1d4ed8; transform: translateY(-1px); }
         #runway-progress { transition: width 0.6s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.4s ease; }
     </style>
 </head>
@@ -71,7 +69,12 @@
                     <p class="text-xs text-slate-500 mt-2 z-10 italic">Visual scale capped at 24 months for comparison</p>
                 </div>
             </div>
-            <button onclick="calculate()" class="w-full mt-8 py-4 btn-primary rounded-xl font-bold text-lg shadow-lg">Recalculate Survival Timeline</button>
+
+            <!-- Removed redundant button; added live-update hint -->
+            <p class="text-center text-sm text-slate-500 mt-6 italic">
+                Updates instantly as you type
+            </p>
+
             <p class="text-center text-sm text-slate-600 mt-4">
                 Want to know if you're Default Alive? → <a href="breakeven-analysis.html" class="text-blue-600 hover:underline">Breakeven Calculator</a>
             </p>
@@ -210,12 +213,10 @@
                 burnEl.innerText = "Net Burn: $" + netBurn.toLocaleString() + " / mo";
                 progressContainer.setAttribute('aria-valuenow', runway);
                 
-                // Visual progress: 24 months is considered "100%" for indicator
                 let percentage = (runway / 24) * 100;
                 percentage = Math.min(Math.max(percentage, 5), 100);
                 progressEl.style.width = percentage + "%";
                 
-                // Color coding indicator
                 if (runway < 6) progressEl.style.backgroundColor = "#ef4444"; // Red
                 else if (runway < 12) progressEl.style.backgroundColor = "#f59e0b"; // Amber
                 else progressEl.style.backgroundColor = "#3b82f6"; // Blue
