--- a/equity-dilution.html
+++ b/equity-dilution.html
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <p class="text-[11px] text-slate-400 italic leading-tight">
-                        Note: Option pools are typically created on a **post-money** basis, diluting existing shareholders before the investor. This tool models that common "top-off" effect.
+                        Note: Option pools are typically sized on a post-money basis but created before the investment, diluting existing shareholders rather than the new investor. This tool models that common "top-off" effect.
                     </p>
                 </div>
 
@@ -205,3 +205,4 @@
     </script>
 </body>
 </html>
+
