--- a/referral-roi.html
+++ b/referral-roi.html
@@ -53,7 +53,7 @@
                     <div class="input-card border rounded-xl p-3">
                         <label class="block text-sm font-bold text-slate-700 mb-1">Customer Participation Rate (%)</label>
                         <input type="number" id="participation" value="15" min="0" max="100" step="1" oninput="calculate()" class="w-full bg-transparent font-medium outline-none">
-                        <p class="text-xs text-slate-400 mt-1">Percentage of existing customers who successfully refer a new user. Updates instantly as you type.</p>
+                        <p class="text-xs text-slate-400 mt-1">Percentage of customers who generate at least one successful referral. Updates instantly as you type.</p>
                     </div>
                 </div>
 
@@ -140,7 +140,7 @@
             const participation = parseFloat(document.getElementById('participation').value) / 100 || 0;
 
             const totalReferralCost = rewardGiver + rewardReceiver;
-            const savingsPerCustomer = paidCac - totalReferralCost;
+            const savingsPerCustomer = Math.max(0, paidCac - totalReferralCost); // Clamp at zero for clean UX
             
             // Efficiency % (guard against negative)
             const efficiency = paidCac > 0 ? Math.max(0, (savingsPerCustomer / paidCac) * 100) : 0;
