--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
                         <p class="text-sm text-slate-500 mt-2">Calculate venture debt and monthly payments.</p>
                     </a>
                 </div>
+                <div class="tool-wrapper">
+                    <a href="cac-payback.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-green-500">Efficiency</span>
+                        <h3 class="font-bold text-lg mt-1">CAC Payback Period</h3>
+                        <p class="text-sm text-slate-500 mt-2">Months to recover customer acquisition cost.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="co-founder-equity-split.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-purple-500">Equity</span>
+                        <h3 class="font-bold text-lg mt-1">Co-Founder Equity Split</h3>
+                        <p class="text-sm text-slate-500 mt-2">Fair ownership model for startup teams.</p>
+                    </a>
+                </div>
             </div>
         </section>
 
@@ -131,6 +145,13 @@
                         <span class="category-tag text-blue-600">Forecasting</span>
                         <h3 class="font-bold text-lg mt-1">MRR Projector</h3>
                         <p class="text-sm text-slate-500 mt-2">Project future monthly recurring revenue.</p>
+                    </a>
+                </div>
+                <div class="tool-wrapper">
+                    <a href="mrr-expansion-churn.html" class="tool-card bg-white p-6 rounded-xl block">
+                        <span class="category-tag text-blue-600">Forecasting</span>
+                        <h3 class="font-bold text-lg mt-1">MRR Expansion + Churn</h3>
+                        <p class="text-sm text-slate-500 mt-2">Net retention with upsells & churn.</p>
                     </a>
                 </div>
                 <div class="tool-wrapper">
